--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ a:hover {
 .d-bloc .navbar a,
 .d-bloc .navbar-brand,
 .d-bloc a .icon-sm,
-.d-bloc a .icon-md,
+/* .d-bloc a .icon-md, */
 .d-bloc a .icon-lg,
 .d-bloc a .icon-xl,
 .d-bloc h1 a,
@@ -464,6 +464,7 @@ nav .caret {
 
 .btn {
     margin: 0 5px 5px 0;
+    color: #000000!important;
 }
 
 .btn.pull-right {
@@ -521,12 +522,22 @@ button {
 .panel-rd .panel-footer {
     border-radius: 0 0 29px 29px;
 }
-
+.form-group{
+    padding-bottom: 10px;
+}
 .form-control {
     border-color: rgba(0, 0, 0, .1);
     box-shadow: none;
+    width: 250px;
+    height: 24px;
+    padding: 4px;
+    font-size: 14px;
+    border-radius: 8px;
 }
-
+.form-control1{
+    width: 500px;
+    height: 100px;
+}
 .scrollToTop {
     width: 40px;
     height: 40px;
@@ -721,6 +732,7 @@ p {
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+    color: rgba(0, 0, 0, .8)!important;
 }
 
 h2 {
@@ -757,7 +769,9 @@ h4 {
 .white {
     color: #FFFFFF!important;
 }
-
+.black{
+    color: #000000!important;
+}
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -795,17 +809,18 @@ h4 {
 
 
 .tc-white{
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 .text{
     font-size: 18px;
     text-align: center;
     font-weight: 600;
+    color: #000000!important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -850,10 +865,13 @@ h4 {
     background-image: url("img/image-de-presentation.bmp");
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1920px) {
     .bloc {
         padding-left: 20px;
         padding-right: 20px;
+    }
+    .container{
+        max-width: 1920px;
     }
     .bloc.full-width-bloc,
     .bloc-tile-2.full-width-bloc .container,
@@ -863,7 +881,6 @@ h4 {
         padding-right: 0;
     }
 }
-
 @media (max-width: 992px) and (min-width: 768px) {
     .navbar .nav {
         max-width: 80%
@@ -872,35 +889,16 @@ h4 {
         max-width: 100%
     }
 }
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-    .b-parallax {
-        background-attachment: scroll;
-    }
-}
-
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
-    .b-parallax {
-        background-attachment: scroll;
-    }
-}
-
 @media (max-width: 991px) {
     .container {
         width: 100%;
-    }
-    .b-parallax {
-        background-attachment: scroll;
     }
     .page-container,
     #hero-bloc {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
+
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -909,8 +907,7 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+
     }
 }
 
@@ -930,6 +927,33 @@ h4 {
         padding-left: 10px!important;
         padding-right: 10px!important;
     }
+    /* modification */
+    .form-control{
+        width: 95%;
+    }
+
+    .b-parallax {
+        background-attachment: scroll;
+    }
+    .promesse h2{
+        margin: 5px;
+        padding-bottom: 5px;
+    }
+    .col-xs-12 p{
+        font-size: 18px;
+        margin: 0 5px;
+    }
+    .mg-md{
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .black-background{
+        padding: 0;
+    }
+    .img-responsive{
+        display: inline-block;
+    }
+    /* modification */
     .b-parallax {
         background-attachment: scroll;
     }
